--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,30 +1,54 @@
-name: Build and Push Docker Image
+name: CI/CD for Spring Boot Backend
 
 on:
   push:
     branches:
-      - main   # jab bhi tum main branch pe push karoge, build hoga
+      - main   # Trigger when code is pushed to main branch
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Code checkout
-      - name: Checkout code
+      # 1. Checkout code from GitHub
+      - name: Checkout Code
         uses: actions/checkout@v3
 
-      # Step 2: DockerHub login
-      - name: Login to DockerHub
+      # 2. Setup JDK to build Spring Boot
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      # 3. Build JAR
+      - name: Build with Maven
+        run: mvn clean package -DskipTests
+
+      # 4. Login to Docker Hub
+      - name: Docker Login
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Step 3: Build & Push image
-      - name: Build and Push Docker image
-        uses: docker/build-push-action@v4
+      # 5. Build Docker Image
+      - name: Build Docker Image
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/springboot-app:latest .
+
+      # 6. Push Docker Image
+      - name: Push to Docker Hub
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/springboot-app:latest
+
+      # 7. Deploy to EC2
+      - name: Deploy on EC2
+        uses: appleboy/ssh-action@v0.1.8
         with:
-          context: .
-          push: true
-          tags: paras910/springboot-app:latest
+          host: ${{ secrets.EC2_HOST }}
+          username: ubuntu
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            docker pull ${{ secrets.DOCKER_USERNAME }}/springboot-app:latest
+            docker stop springboot-app || true
+            docker rm springboot-app || true
+            docker run -d -p 8080:8080 --name springboot-app ${{ secrets.DOCKER_USERNAME }}/springboot-app:latest
